# EdgarGetter

./: .dockerignore  .gitignore  Dockerfile  main.py  models.py  pyproject.toml
db/: db.py  models.py
infra/: README.md  app.py
infra/infra/: infra_stack.py
src/: summarizer.py
